# SoundStream

./: LICENSE  README.md  pyproject.toml
soundstream/: __init__.py  decoder.py  encoder.py  soundstream.py  units.py
