[tool.poetry]
name = "soundstream"
version = "0.0.1"
description = "Implementation of SoundStream, an end-to-end neural audio codec"
authors = ["Hayden Shively"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
vector-quantize-pytorch = "^1.6.11"
torchaudio = "^2.0.2"
numpy = "^1.24.3"
huggingface-hub = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
